@@ -56,7 +56,7 @@ my @hash_types_selection =
   100,
   1400,
   1700,
-  16800,
+  22000,
   1000,
   3000,
   5500,
@@ -112,8 +112,6 @@ my @hash_types =
   2100,
   2400,
   2410,
-  2500,
-  2501,
   2611,
   2711,
   2811,
@@ -256,8 +254,6 @@ my @hash_types =
   16500,
   16600,
   16700,
-  16800,
-  16801,
   16900,
   17210,
   17300,
@@ -356,6 +352,20 @@ my @hash_types =
   26403,
   26500,
   26600,
+  26700,
+  26800,
+  26900,
+  27000,
+  27100,
+  27200,
+  27300,
+  27400,
+  27500,
+  27600,
+  27700,
+  27800,
+  27900,
+  28000,
 );
 
 if (scalar @ARGV)
